# ChangeLog for www-apps/wordpress
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/wordpress/ChangeLog,v 1.131 2011/12/13 04:29:19 radhermit Exp $

*wordpress-3.3 (13 Dec 2011)

  13 Dec 2011; Tim Harder <radhermit@gentoo.org> -wordpress-3.3_rc3.ebuild,
  +wordpress-3.3.ebuild:
  Version bump and remove old.

*wordpress-3.3_rc3 (11 Dec 2011)

  11 Dec 2011; Tim Harder <radhermit@gentoo.org> -wordpress-3.3_rc1.ebuild,
  +wordpress-3.3_rc3.ebuild:
  Version bump and remove old.

  02 Dec 2011; Tim Harder <radhermit@gentoo.org> -wordpress-3.1.2.ebuild,
  -wordpress-3.1.3.ebuild, -wordpress-3.1.4.ebuild, -wordpress-3.2.ebuild,
  -wordpress-3.3_beta4.ebuild:
  Remove old.

*wordpress-3.3_rc1 (02 Dec 2011)

  02 Dec 2011; Tim Harder <radhermit@gentoo.org> +wordpress-3.3_rc1.ebuild:
  Version bump.

*wordpress-3.3_beta4 (25 Nov 2011)

  25 Nov 2011; Tim Harder <radhermit@gentoo.org> -wordpress-3.3_beta3.ebuild,
  +wordpress-3.3_beta4.ebuild:
  Version bump and remove old.

*wordpress-3.3_beta3 (11 Nov 2011)

  11 Nov 2011; Tim Harder <radhermit@gentoo.org> -wordpress-3.3_beta1.ebuild,
  -wordpress-3.3_beta2.ebuild, +wordpress-3.3_beta3.ebuild:
  Version bump and remove old.

*wordpress-3.3_beta2 (21 Oct 2011)

  21 Oct 2011; Tim Harder <radhermit@gentoo.org> +wordpress-3.3_beta2.ebuild:
  Version bump.

*wordpress-3.3_beta1 (11 Oct 2011)

  11 Oct 2011; Tim Harder <radhermit@gentoo.org> +wordpress-3.3_beta1.ebuild:
  Version bump to development release.

*wordpress-3.2.1 (13 Jul 2011)

  13 Jul 2011; Tim Harder <radhermit@gentoo.org> +wordpress-3.2.1.ebuild:
  Version bump.

*wordpress-3.2 (05 Jul 2011)

  05 Jul 2011; Tim Harder <radhermit@gentoo.org> +wordpress-3.2.ebuild:
  Version bump.

*wordpress-3.1.4 (30 Jun 2011)

  30 Jun 2011; Tim Harder <radhermit@gentoo.org> +wordpress-3.1.4.ebuild:
  Version bump.

*wordpress-3.1.3 (25 May 2011)
