@@ -4,19 +4,21 @@ Hash: SHA512
 AUX postinstall-en.txt 1554 RMD160 0ae328c94560e30f9a8d5c46eb449ed1d2861970 SHA1 45c11b94046bfdff98a60571a36e56680d43a2ab SHA256 85ecf09ffd839186f5aeba6847798827191d56c6fb7798783100b9fecdcf64df
 AUX postupgrade-en.txt 1653 RMD160 a41d01174b74c39fa3c9096630904dac6bcbaa90 SHA1 14f54adc507f62a01055a2745d013ff1c8261e36 SHA256 e03f88067a62e5d9cb7e418face5f816b65523f873bfaabdca69efa23377e754
 DIST wordpress-3.2.1.tar.gz 3607522 RMD160 a78f1aec0d142e1de32f214fd65ac2aef256979d SHA1 674bcf0abe80770ac08dfb4c5f21df3303bf771a SHA256 21e3cebd02808f9ee39a979d22e6e10bce5356ddf7068aef182847b12c9b95a9
+DIST wordpress-3.3.1.tar.gz 3879784 RMD160 956a99348b965c2bc0fa4083e5295425958e90a4 SHA1 c250cf66da88c49c927161172af2264caac6d2d5 SHA256 e884db6e551c155f022533b6653867b048088cd3cbcbfe546b404696dd960dc2
 DIST wordpress-3.3.tar.gz 3879891 RMD160 3e51fc354f26b9d5a56e2e330e954b1a692e6cb6 SHA1 0a2528df28f8c740638b25d352ef22890a367302 SHA256 ba32a18d3fe263cbe095d846817173b808a74a497c3eab016149cdf8fcbb3e43
 EBUILD wordpress-3.2.1.ebuild 1172 RMD160 83c4fc8ec1db2fb32e78eabc7ab1bad8691e11a5 SHA1 ddacd69f1fa800af04f8a14456093d0ad866282f SHA256 55449dd0466ecfd683034050651fc892dd299f5c6175902a7d8f2d941bc11505
+EBUILD wordpress-3.3.1.ebuild 1167 RMD160 ae3bce4314fa31f4988dc6640f9ad39e88d17737 SHA1 de7f98d327f13604987cb5ee353b80e6ace08d17 SHA256 024ce992727f2915e79a910fb31cc3b95d36c2ed1221a41db830e715650c6f1b
 EBUILD wordpress-3.3.ebuild 1165 RMD160 fbe5fed335b86adb9af5adbbeecf0354895d3d78 SHA1 72cdacb7a594f199d828c51d1d6fd529c02e1d0e SHA256 8a19f7a3961ee40f97847d1e544abef48349a7faa24e893ee73731513bc00715
-MISC ChangeLog 21889 RMD160 0c83051aec5ea70ba0b333d1c0d4cf69c0e9533e SHA1 67155ab869af67dcf5e99f58c20c14bf3b79905b SHA256 affb5c358bd5a2adc493ce4243309db7dcb278b33967e17240c5dd693af34832
+MISC ChangeLog 22012 RMD160 27c6603ea82c35144479ac2ee9841a15ff464849 SHA1 5ca651c6655ed38d9ab7cf002196eb7ccd99604b SHA256 53982e5319692d623777e47c6258bc0219f27dab93f825715c859d059e96c716
 MISC metadata.xml 263 RMD160 41bb3e89b142b29faef36e342335a6124945fb7d SHA1 0763d21226bbe03aa13ed8827b74c1af49c1afea SHA256 987a741d5b64ea875cd0ada6d36e949a015742500bf9379b3ec3bbc45186bfac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBCgAGBQJO5tSvAAoJEEqz6FtPBkyjxoAH/3CFp3jznBKUFhvk5ffqsP+L
-2zNBbkDGf1TCo9KewbPZNe9xKsQxmroof0Qb8YKfXdv5B5iHMW3/jKBlIgkTzANc
-OHvutr51OMV/o3ZOVyDXAkRUgXcLoB3BPc+goTbXV+zt3v5TcVcpw43MLyslhA3E
-FGJ7cQ1HijfsakTN5sfy8QOq1lAq1AOAl6DHYxe5lWwxR2jys3zqYocMkHQn/rvY
-iGwuXCC8FrGePh6ZqAt9cLbWNZE+PGwN4Z4D9nSPamFfq9T7iL5Mc0rE4CKsimKY
-3hR169btQ5DDdpgl+EIj0ozWG/hJytF6pV9m4Q/Bow/5rHevFOUjUAxqWaZJWVA=
-=Lxe/
+iQEcBAEBCgAGBQJPBosVAAoJEEqz6FtPBkyje54IAJK9myYQ2ZQ+mmsLDZoW2kyH
+0AxMYxawngtF/5EJQixpUZH1dKASAoidSokpjdDLI5xRPRafouyjAuhTRWqfffq+
+tNdCI7m73ux8oGllfy8ELlIjNPn9mn4KCt6d3ql/s4hPHe8/yQZmYXgISXu+4SHC
+eJdT7svjm2+/4/wrnaB1qwgfFZ7849rAPtVPGfR0eYYi18sD+DD/ylccW1yBthFl
+Yq1GFnXrokzgcLSmsXehg8wBkzvzRqxaJ4dybwERHQoLm44cG2naCRYm2XQ8t34/
+ZknUBQqslT0Mne0QK0cGr5Nq195ypU7/IvoyjREWC5L28PYV3L25KSJCwz1L7+g=
+=ta4K
 -----END PGP SIGNATURE-----
