@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/wordpress
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/wordpress/ChangeLog,v 1.131 2011/12/13 04:29:19 radhermit Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-apps/wordpress/ChangeLog,v 1.132 2012/01/06 05:47:59 radhermit Exp $
+
+*wordpress-3.3.1 (06 Jan 2012)
+
+  06 Jan 2012; Tim Harder <radhermit@gentoo.org> +wordpress-3.3.1.ebuild:
+  Version bump.
 
 *wordpress-3.3 (13 Dec 2011)
 
